--- a/dev/blacklist.yml
+++ b/dev/blacklist.yml
@@ -20,3 +20,16 @@ spring:
   jackson:
     serialization:
       fail-on-empty-beans: 'false'
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+    fetch-registry: true
+    register-with-eureka: true
+    enabled: true
+
+springdoc: 
+  swagger-ui:
+  operationsSorted: method
+  path: /swagger-ui-custom.html
