--- a/dev/autenticacion.yml
+++ b/dev/autenticacion.yml
@@ -21,6 +21,19 @@ spring:
     serialization:
       fail-on-empty-beans: 'false'
 
+jwt:
+  secret: secret
+
+admin-paths:
+  paths:
+    - uri: "api/black-list"
+      method: "POST"
+    - uri: "api/black-list"
+      method: "PUT"
+    - uri: "api/black-list/{1}[1-9]+[0-9]*"
+      method: "DELETE"
+    - uri: "api/black-list/{1}[1-9]+[0-9]*"
+      method: "GET"
 eureka:
   client:
     service-url:
