--- a/dev/autenticacion.yml
+++ b/dev/autenticacion.yml
@@ -26,13 +26,13 @@ jwt:
 
 admin-paths:
   paths:
-    - uri: "api/black-list"
+    - uri: "/api/black-list"
       method: "POST"
-    - uri: "api/black-list"
+    - uri: "/api/black-list"
       method: "PUT"
-    - uri: "api/black-list/{1}[1-9]+[0-9]*"
+    - uri: "/api/black-list/{1}[1-9]+[0-9]*"
       method: "DELETE"
-    - uri: "api/black-list/{1}[1-9]+[0-9]*"
+    - uri: "/api/black-list/{1}[1-9]+[0-9]*"
       method: "GET"
 eureka:
   client:
