--- a/dev/micro-ms-client.yml
+++ b/dev/micro-ms-client.yml
@@ -7,6 +7,11 @@ spring:
       port: 27017
       database: pybankdb
 
+  security:
+    user:
+      name: admin
+      password: password
+
 logging:
   level:
     org.springframework.data.mongodb: DEBUG
