--- a/dev/micro-ms-transactions.yml
+++ b/dev/micro-ms-transactions.yml
@@ -5,7 +5,7 @@ spring:
     mongodb:
       host: localhost
       port: 27017
-      database: transactions_db
+      database: pybankdb
 
 logging:
   level:
