--- a/dev/micro-ms-client.yml
+++ b/dev/micro-ms-client.yml
@@ -3,10 +3,7 @@ spring:
     name: micro-ms-client
   data:
     mongodb:
-      host: localhost
-      port: 27017
-      database: pybankdb
-
+      uri: mongodb+srv://momocho20:TVDQKq0W557m8Abn@cluster0.drv6iww.mongodb.net/?authSource=pybankdb&authMechanism=SCRAM-SHA-1
 
 logging:
   level:
