--- a/dev/micro-ms-client.yml
+++ b/dev/micro-ms-client.yml
@@ -3,7 +3,7 @@ spring:
     name: micro-ms-client
   data:
     mongodb:
-      uri: mongodb+srv://momocho20:TVDQKq0W557m8Abn@cluster0.drv6iww.mongodb.net/?authSource=pybankdb&authMechanism=SCRAM-SHA-1
+      uri: mongodb+srv://momocho20:TVDQKq0W557m8Abn@cluster0.drv6iww.mongodb.net/pybankdb?authSource=pybankdb&authMechanism=SCRAM-SHA-1
 
 logging:
   level:
